--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
 theme: jekyll-theme-dinky
+
+integration_spreadsheet_key: 1sQHoWj0k6iXHhJ1sBtb7sAQWD9hXYFXCFOrBXiB5jCI
+
+github_user: hack-education-data
+github_repo: common-sense-media
