--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -1,16 +1,4 @@
-- Name: Chris Whittle
-  Organization: Whittle School & Studio
-  Role: ''
-  Notes: ''
-- Name: Chris Whittle
-  Organization: Whittle Communications
-  Role: founder
-  Notes: ''
-- Name: Chris Whittle
-  Organization: Channel One
-  Role: ''
-  Notes: ''
-- Name: Chris Whittle
-  Organization: Edison Schools
-  Role: founder
+- Name: Jim Steyer
+  Organization: Common Sense Media
+  Role: 'Founder, CEO'
   Notes: ''
