--- a/_data/investors.yaml
+++ b/_data/investors.yaml
@@ -1,3 +1,15 @@
-- Name: Unknown
-  Date: ''
-  Notes: ''
+- Name: Gates Foundation
+  Date: '2013'
+  Notes: '$100,000 in grant funding'
+- Name: Gates Foundation
+  Date: '2015'
+  Notes: '$750,000 in grant funding'
+- Name: Gates Foundation
+  Date: '2017'
+  Notes: '$750,000 in grant funding'
+- Name: Omidyar Network
+  Date: '2006'
+  Notes: $4.3 million in venture capital
+- Name: Broad Foundation
+  Date: '2013'
+  Notes: $3 million grant
